--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: objective-c
 env:
   global:
     - EnableNuGetPackageRestore=true  
-    - XBUILD_FRAMEWORK_FOLDERS_PATH="$(TRAVIS_BUILD_DIR)/.ci/xbuild-frameworks"
     - secure: "m+Kz51SNkKIpEFdmRZ4Zxgpow7R2gWVz3M9u0iinZTam0KV0ju9TvcnLF4ny\nSTLYKD04C4LoPqYfdEJ/qwv5H0ch254MbRMh2rt5X36PS11VfGL2yfKrdW8T\n/e8iTmGLWq+nn72P1927ZLOs9wkJvAAvUpC71OxYPB553wIYJXw="
 before_install:
   # Make sure mono is installed,
@@ -11,6 +10,7 @@ before_install:
   - hdid MonoFramework-MDK-3.0.12.macos10.xamarin.x86.dmg
   - sudo installer -pkg "/Volumes/Mono Framework MDK 3.0.12/MonoFramework-MDK-3.0.12.macos10.xamarin.x86.pkg" -target /
 before_script:
+  - export XBUILD_FRAMEWORK_FOLDERS_PATH=`pwd`/.ci/xbuild-frameworks  
   - .ci/install_portable_refs.sh 
 script:
   - xbuild /v:detailed
