Added support for dynamically loading assembly references.

--- a/WhoTestsTheTesters/RunTests.yml
+++ b/WhoTestsTheTesters/RunTests.yml
@@ -3,6 +3,7 @@
 config:
   assemblies:
     - BasicTests\bin\Debug\BasicTests.dll
+    - ConstraintsTests\bin\Debug\ConstraintsTests.dll
   platforms:
     - id: net40-x86
     - id: net45-x64
