--- a/Runner/pclunit-runner/packages.config
+++ b/Runner/pclunit-runner/packages.config
@@ -3,6 +3,7 @@
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net40" />
   <package id="Microsoft.AspNet.SignalR.Core" version="1.1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.2" targetFramework="net40" />
+  <package id="Microsoft.Owin.Diagnostics" version="1.1.0-beta2" targetFramework="net40" />
   <package id="Microsoft.Owin.Host.HttpListener" version="0.21.0-pre" targetFramework="net40" />
   <package id="Microsoft.Owin.Hosting" version="0.21.0-pre" targetFramework="net40" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net40" />
