--- a/Runner/pclunit-runner/packages.config
+++ b/Runner/pclunit-runner/packages.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net40" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.0.0-rc1-130704-b97" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.0.0-rc1-130704-b97" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.0.0-rc1-20704-439" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.0-rc1-20704-439" targetFramework="net45" />
-  <package id="Microsoft.Owin.Hosting" version="2.0.0-rc1-20704-439" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="2.0.0-rc1-20704-439" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.0.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.0.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="1.1.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="1.1.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="1.1.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="1.1.0-beta2" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
-  <package id="Owin" version="1.0" targetFramework="net40" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="YamlDotNet.Core" version="2.0.1" targetFramework="net40" />
   <package id="YamlDotNet.RepresentationModel" version="2.0.1" targetFramework="net40" />
 </packages>
