--- a/Runner/Satellites/net-45-x64-full/net-45-x64-full.csproj
+++ b/Runner/Satellites/net-45-x64-full/net-45-x64-full.csproj
@@ -18,7 +18,7 @@
     <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
