--- a/Runner/Satellites/sl-50-x86/sl-50-x86.csproj
+++ b/Runner/Satellites/sl-50-x86/sl-50-x86.csproj
@@ -4,18 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E64E577E-2F1D-48F9-935A-FABE93E3FBAA}</ProjectGuid>
+    <ProjectGuid>{65EB3F91-B03B-4EE4-92B6-1FB9061E968C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RoughRunner</RootNamespace>
-    <AssemblyName>RoughRunner</AssemblyName>
+    <RootNamespace>sl_50_x86</RootNamespace>
+    <AssemblyName>sl-50-x86</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -34,8 +34,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ionic.Zip">
+      <HintPath>..\..\..\packages\DotNetZip.1.9.1.8\lib\net20\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,24 +51,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\PclUnit\PclUnit.csproj">
-      <Project>{999019D5-60C5-4CE6-A070-28B197C44D2A}</Project>
-      <Name>PclUnit</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BasicTests\BasicTests.csproj">
-      <Project>{07944FC5-DEBB-478F-A464-AD62CA4DD7A0}</Project>
-      <Name>BasicTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ConstraintsTests\ConstraintsTests.csproj">
-      <Project>{360DD182-DFD4-479E-B001-042413D2DE02}</Project>
-      <Name>ConstraintsTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ConventionTestProcessor\ConventionTestProcessor.csproj">
-      <Project>{5afb0620-f75f-45d6-b287-f1a2f1337db2}</Project>
-      <Name>ConventionTestProcessor</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TestPage.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="xap\sl-50-x86-xap.xap" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
