--- a/WhoTestsTheTesters/ConventionTestProcessor/ConventionTestProcessor.csproj
+++ b/WhoTestsTheTesters/ConventionTestProcessor/ConventionTestProcessor.csproj
@@ -4,15 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E64E577E-2F1D-48F9-935A-FABE93E3FBAA}</ProjectGuid>
+    <ProjectGuid>{5AFB0620-F75F-45D6-B287-F1A2F1337DB2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RoughRunner</RootNamespace>
-    <AssemblyName>RoughRunner</AssemblyName>
+    <RootNamespace>ConventionTestProcessor</RootNamespace>
+    <AssemblyName>ConventionTestProcessor</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,23 +51,15 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\PclUnit\PclUnit.csproj">
-      <Project>{999019D5-60C5-4CE6-A070-28B197C44D2A}</Project>
+      <Project>{999019d5-60c5-4ce6-a070-28b197c44d2a}</Project>
       <Name>PclUnit</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BasicTests\BasicTests.csproj">
-      <Project>{07944FC5-DEBB-478F-A464-AD62CA4DD7A0}</Project>
-      <Name>BasicTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ConstraintsTests\ConstraintsTests.csproj">
-      <Project>{360DD182-DFD4-479E-B001-042413D2DE02}</Project>
-      <Name>ConstraintsTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ConventionTestProcessor\ConventionTestProcessor.csproj">
-      <Project>{5afb0620-f75f-45d6-b287-f1a2f1337db2}</Project>
-      <Name>ConventionTestProcessor</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
