--- a/Runner/pclunit-runner/pclunit-runner.csproj
+++ b/Runner/pclunit-runner/pclunit-runner.csproj
@@ -88,9 +88,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PclUnitHub.cs" />
+    <Compile Include="PlatformResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunConfigCommand.cs" />
+    <Compile Include="Reshare.cs" />
+    <Compile Include="Yml.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
