--- a/WhoTestsTheTesters/RunTests.yml
+++ b/WhoTestsTheTesters/RunTests.yml
@@ -6,9 +6,12 @@ config:
     - ConstraintsTests\bin\Debug\ConstraintsTests.dll
   platforms:
     - id: net40-x86
+    - id: net40-x64 
+    - id: net45-x86
     - id: net45-x64
     - id: sl50-x86
-
-#  - id: sl50-x86
-#    assemblies:
-#      - path/to/silverlight/tests.dll  
+      assemblies:
+        - SilverlightTests\bin\Debug\SilverlightTests.dll
+    - id: sl50-x64
+      assemblies:
+        - SilverlightTests\bin\Debug\SilverlightTests.dll
