--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ language: objective-c
 
 env:
   global:
-    - EnableNuGetPackageRestore=true  
-    - secure: "m+Kz51SNkKIpEFdmRZ4Zxgpow7R2gWVz3M9u0iinZTam0KV0ju9TvcnLF4ny\nSTLYKD04C4LoPqYfdEJ/qwv5H0ch254MbRMh2rt5X36PS11VfGL2yfKrdW8T\n/e8iTmGLWq+nn72P1927ZLOs9wkJvAAvUpC71OxYPB553wIYJXw="
+    - EnableNuGetPackageRestore=true
+  matrix:
+    - MONO_VER="3.1.1"
 before_install:
   # Make sure mono is installed,
-  - wget http://download.mono-project.com/archive/3.0.12/macos-10-x86/MonoFramework-MDK-3.0.12.macos10.xamarin.x86.dmg
-  - hdid MonoFramework-MDK-3.0.12.macos10.xamarin.x86.dmg
-  - sudo installer -pkg "/Volumes/Mono Framework MDK 3.0.12/MonoFramework-MDK-3.0.12.macos10.xamarin.x86.pkg" -target /
+  - wget "http://download.mono-project.com/archive/${MONO_VER}/macos-10-x86/MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.dmg"
+  - hdid "MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.dmg"
+  - sudo installer -pkg "/Volumes/Mono Framework MDK ${MONO_VER}/MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.pkg" -target /
 before_script:
   - export XBUILD_FRAMEWORK_FOLDERS_PATH=`pwd`/.ci/xbuild-frameworks  
   - .ci/install_portable_refs.sh 
