Some std out output
  - more consistent std output across runners
  - some rough untested teamcity output #11

--- a/Runner/Satellites/net/net45/net-45-x64-full.csproj
+++ b/Runner/Satellites/net/net45/net-45-x64-full.csproj
@@ -65,6 +65,9 @@
     <Compile Include="..\..\shared\Commands.cs">
       <Link>Commands.cs</Link>
     </Compile>
+    <Compile Include="..\..\shared\PrintTests.cs">
+      <Link>PrintTests.cs</Link>
+    </Compile>
     <Compile Include="..\..\shared\RunTests.cs">
       <Link>RunTests.cs</Link>
     </Compile>
