--- a/Runner/Satellites/net/net40/net-40-x86-full.csproj
+++ b/Runner/Satellites/net/net40/net-40-x86-full.csproj
@@ -62,6 +62,9 @@
     <Compile Include="..\..\shared\Commands.cs">
       <Link>Commands.cs</Link>
     </Compile>
+    <Compile Include="..\..\shared\PrintTests.cs">
+      <Link>PrintTests.cs</Link>
+    </Compile>
     <Compile Include="..\..\shared\RunTests.cs">
       <Link>RunTests.cs</Link>
     </Compile>
