--- a/WhoTestsTheTesters/ConventionTestProcessor/ConventionTestProcessor.csproj
+++ b/WhoTestsTheTesters/ConventionTestProcessor/ConventionTestProcessor.csproj
@@ -48,8 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConventionMatch.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeamCity.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\PclUnit\PclUnit.csproj">
