--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ env:
     - MONO_VER="3.1.2"
 before_install:
   # Make sure mono is installed,
-  - wget "http://download.mono-project.com/archive/${MONO_VER}/macos-10-x86/MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.dmg"
-  - hdid "MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.dmg"
-  - sudo installer -pkg "/Volumes/Mono Framework MDK ${MONO_VER}/MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.pkg" -target /
+  - wget "http://download.mono-project.com/archive/${MONO_VER}/macos-10-x86/MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.pkg"
+  - sudo installer -pkg "MonoFramework-MDK-${MONO_VER}.macos10.xamarin.x86.pkg" -target /
 script:
   - xbuild PclUnit.mono.sln
   - WhoTestsTheTesters/RunTests.Mono.Manually.sh
